2002-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* hurdio.c: New file.
	* Makefile (SRCS): Add hurdio.c.
	* term.h: Add hurdio_bottom declaration.
	* main.c: Add T_HURDIO to enum of tty_type.
	(parse_opt): Add case for hurdio bottom handler.
	(term_argp): Likewise.
	(main): Likewise.

2002-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* main.c: Include `argp.h' and `version.h'.
	(argp_program_version): New global variable.
	(tty_name, tty_type, tty_arg): Likewise.
	(parse_opt): New function.
	(term_argp): New global variable.
	(main): Call argp_parse, use new global variables to parse the
	options.  Remove TYPE variable.  Get the bootstrap port after
	checking the argument line.
	* term.h (pterm_name): Remove variable.
	(tty_arg): Declare variable.
	* devio.c (initial_open): Use tty_arg instead pterm_name.
	(devio_assert_dtr): Likewise.

2002-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* term.h: Include `hurd/hurd_types.h'.
	(struct bottomhalf): Change the return types of the following
	members from void to error_t: abandon_physical_output,
	suspend_physical_output, notice_input_flushed, desert_dtr,
	set_break, clear_break, start_output, set_bits (which now takes an
	struct termios * as argument), mdmctl and mdmstate (which now
	takes an int * as argument).  Add new members init and type.
	(bottom): Define as const.
	(devio_bottom, ptyio_bottom): Declare as const.
	(drop_output): Change return type from void to error_t.
	(ptyio_init): Remove prototype.
	* devio.c (devio_abandon_physical_output): Change return value to
	error_t, and return 0.
	(devio_suspend_physical_output): Likewise.
	(devio_notice_input_flushed): Likewise.
	(devio_desert_dtr): Likewise.
	(devio_set_break): Likewise.
	(devio_clear_break): Likewise.
	(devio_start_output): Likewise.
	(devio_set_bits): Likewise.
	(devio_mdmctl): Likewise.
	(devio_mdmstate): Likewise.
        (init_devio): Rename to ...
	(devio_init): ... this.  Do not give constructor attribute.